@@ -25,7 +25,7 @@
 
 import crack
 
-import datetime, os, random, shlex, string, StringIO, traceback
+import datetime, math, os, random, shlex, string, StringIO, traceback
 
 
 class SubstFormatError(Exception):
@@ -55,6 +55,11 @@ def check_password(password):
 
 	if len(chars) < 5:
 		raise ValueError, "isn't varied enough"
+
+
+	# check for entropy
+	if entropy(password) / entropy_ideal(len(password)) < 0.8:
+		raise ValueError, "isn't random enough"
 
 
 	# check if the password is a palindrome
@@ -125,6 +130,26 @@ def dom_text(node):
 			text += child.nodeValue.encode("utf-8")
 
 	return text
+
+
+def entropy(string):
+	"Calculates the Shannon entropy of a string"
+
+	# get probability of chars in string
+	prob = [ float(string.count(c)) / len(string) for c in dict.fromkeys(list(string)) ]
+
+	# calculate the entropy
+	entropy = - sum([ p * math.log(p) / math.log(2.0) for p in prob ])
+
+	return entropy
+
+
+def entropy_ideal(length):
+	"Calculates the ideal Shannon entropy of a string with given length"
+
+	prob = 1.0 / length
+
+	return -1.0 * length * prob * math.log(prob) / math.log(2.0)
 
 
 def escape_markup(string):
