@@ -4,7 +4,7 @@ xxxx-xx-xx: Revelation 0.4.6
 New features:
 - new applet option to show/hide search entry
 - use icons instead of colors in password entries to indicate strength
-- minor improvements to password checking
+- added Shannon entropy test and other improvements to password checker
 
 Bugfixes:
 - fixed drag and drop undo/redo crashes
